--- a/turbo/turbo-production/index.html
+++ b/turbo/turbo-production/index.html
@@ -163,7 +163,7 @@
                   <a href="elements.html">Elements</a>
                 </li>
                 <li class="login-register-link right-side-link"><a href="registration.html">
-                    <i class="icon_lock-open_alt"></i>Login</a>
+                    Login</a>
                 </li>
                 <li class="dropdown right-side-link">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
